default/objects/Pricebook2/fields/Acoustic_signaling_with_LED__c.field-meta.xml
<CustomField>
    <fullName>Acoustic_signaling_with_LED__c</fullName>
    <description>Acoustic signaling with diode LED</description>
    <label>Acoustic signaling with LED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>