default/objects/Pricebook2/fields/Adhesive_switch_P_S__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_switch_P_S__c</fullName>
    <description>Two-position adhesive switch</description>
    <label>Adhesive switch P/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>