default/objects/Pricebook2/fields/Adhesive_switch_P_S_with_a_diode_LED__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_switch_P_S_with_a_diode_LED__c</fullName>
    <description>Two-position adhesive switch with diode</description>
    <label>Adhesive switch P/S with a diode LED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>