default/objects/Pricebook2/fields/Antenna_GPS_FLAT__c.field-meta.xml
<CustomField>
    <fullName>Antenna_GPS_FLAT__c</fullName>
    <description>GPS antenna</description>
    <label>Antenna GPS FLAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>