default/objects/Pricebook2/fields/Antenna_GPS_Shark__c.field-meta.xml
<CustomField>
    <fullName>Antenna_GPS_Shark__c</fullName>
    <description>Outdoor GPS antenna for roof installation</description>
    <label>Antenna GPS Shark</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>