default/objects/Pricebook2/fields/Archiving__c.field-meta.xml
<CustomField>
    <fullName>Archiving__c</fullName>
    <description>Additional data archiving (12 months)</description>
    <inlineHelpText>vehicle / month</inlineHelpText>
    <label>Archiving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>