default/objects/Pricebook2/fields/Basic_switch__c.field-meta.xml
<CustomField>
    <fullName>Basic_switch__c</fullName>
    <description>Basic two-position switch - invasive installation</description>
    <label>Basic switch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>