default/objects/Pricebook2/fields/Button_Panic2__c.field-meta.xml
<CustomField>
    <fullName>Button_Panic2__c</fullName>
    <description>Activation button, 2 m cable</description>
    <label>Button Panic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>