default/objects/Pricebook2/fields/Button_Panic__c.field-meta.xml
<CustomField>
    <fullName>Button_Panic__c</fullName>
    <description>Is used for send the threat message, when you press this button.</description>
    <label>Button Panic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>