default/objects/Pricebook2/fields/Cable_CAN__c.field-meta.xml
<CustomField>
    <fullName>Cable_CAN__c</fullName>
    <description>Cable for invasive connection to the rail CAN</description>
    <label>Cable CAN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>