default/objects/Pricebook2/fields/Calibrating_transducer_PT100__c.field-meta.xml
<CustomField>
    <fullName>Calibrating_transducer_PT100__c</fullName>
    <description>Calibrated single input transducer</description>
    <label>Calibrating transducer PT100</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>