default/objects/Pricebook2/fields/Can_Bus_transducer_MCB_02__c.field-meta.xml
<CustomField>
    <fullName>Can_Bus_transducer_MCB_02__c</fullName>
    <description>used to guard / deactivate guarding of vehicle according to the lock</description>
    <label>Can Bus transducer MCB-02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>