default/objects/Pricebook2/fields/CAN_GO_CLICK__c.field-meta.xml
<CustomField>
    <fullName>CAN_GO_CLICK__c</fullName>
    <description>Cable for non-contact connection to the rail CAN</description>
    <label>CAN GO CLICK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>