default/objects/Pricebook2/fields/Dalas_chip__c.field-meta.xml
<CustomField>
    <fullName>Dalas_chip__c</fullName>
    <description>Contact chip Dalas</description>
    <label>Dalas chip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>