default/objects/Pricebook2/fields/Driving_Style__c.field-meta.xml
<CustomField>
    <fullName>Driving_Style__c</fullName>
    <description>Analysis and recommendations on driving styles and local receiving speed limits</description>
    <inlineHelpText>vehicle/month</inlineHelpText>
    <label>Driving Style</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>