default/objects/Pricebook2/fields/EU_24__c.field-meta.xml
<CustomField>
    <fullName>EU_24__c</fullName>
    <description>Monthly flat fee for services FLEETCOR Carnet in Poland and in the border, include rental SIM card, data transmission (communication fees) and background maps within the EU.
Commitment for a period of 24 months.</description>
    <inlineHelpText>monthly / unit</inlineHelpText>
    <label>EU 24</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>