default/objects/Pricebook2/fields/Guarding_cargo_space__c.field-meta.xml
<CustomField>
    <fullName>Guarding_cargo_space__c</fullName>
    <description>The activation of the alarm is guided by the state of closing the vehicle cab. If the cabin is closed, the cargo space is guarded for using a microwave sensor that is connected to the GPS unit. In the case of activation of the alarm in the vehicle, a siren will sound and an SMS will be sent to two phone numbers.</description>
    <label>Guarding cargo space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>