default/objects/Pricebook2/fields/Guarding_the_vehicle_one_switch__c.field-meta.xml
<CustomField>
    <fullName>Guarding_the_vehicle_one_switch__c</fullName>
    <description>Used to warn the owner of an unauthorized vehicle being set in motion, using  an SMS sent to chosen two any phone numbers.</description>
    <label>Guarding the vehicle - one switch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>