default/objects/Pricebook2/fields/Guarding_the_vehicle_reader__c.field-meta.xml
<CustomField>
    <fullName>Guarding_the_vehicle_reader__c</fullName>
    <description>Used to warn the owner of an unauthorized vehicle being set in motion, using  an SMS sent to chosen two any phone numbers in case that the driver can not be identified by using any or selected chips (max. 25 pcs).</description>
    <label>Guarding the vehicle - reader</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>