default/objects/Pricebook2/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <description>Recommended installation price of the GPS unit incl. GPS and GSM antennas as well as driving style switches with non-contact reading technology from the rail CAN</description>
    <inlineHelpText>one-time fee / unit</inlineHelpText>
    <label>Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>