default/objects/Pricebook2/fields/Microwave_sensor__c.field-meta.xml
<CustomField>
    <fullName>Microwave_sensor__c</fullName>
    <description>microwave motion sensors</description>
    <label>Microwave sensor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>