default/objects/Pricebook2/fields/Monitoring_in_EU__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_in_EU__c</fullName>
    <label>Tariff EU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>