default/objects/Pricebook2/fields/On_line_position_above_standard__c.field-meta.xml
<CustomField>
    <fullName>On_line_position_above_standard__c</fullName>
    <description>Additional tracking of the vehicle&#39;s position (more than 1x per minute)</description>
    <inlineHelpText>vehicle/month</inlineHelpText>
    <label>On-line position above standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>