default/objects/Pricebook2/fields/Piezoelectric_siren__c.field-meta.xml
<CustomField>
    <fullName>Piezoelectric_siren__c</fullName>
    <description>Acoustic signaling in the absence of driver identification</description>
    <label>Piezoelectric siren</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>