default/objects/Pricebook2/fields/Plastic_temperature_sensor_holder__c.field-meta.xml
<CustomField>
    <fullName>Plastic_temperature_sensor_holder__c</fullName>
    <description>for attachement to the wall</description>
    <label>Plastic temperature sensor holder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>