default/objects/Pricebook2/fields/Power_supply_power_cable_harnesses__c.field-meta.xml
<CustomField>
    <fullName>Power_supply_power_cable_harnesses__c</fullName>
    <description>Cable for connection the GPS unit with fuse</description>
    <label>Power supply power cable harnesses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>