default/objects/Pricebook2/fields/Premium_24__c.field-meta.xml
<CustomField>
    <fullName>Premium_24__c</fullName>
    <inlineHelpText>monthly / unit</inlineHelpText>
    <label>Premium 24</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>