default/objects/Pricebook2/fields/Premium_36__c.field-meta.xml
<CustomField>
    <fullName>Premium_36__c</fullName>
    <inlineHelpText>monthly / unit</inlineHelpText>
    <label>Premium 36</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>