default/objects/Pricebook2/fields/Prepaid_12__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_12__c</fullName>
    <inlineHelpText>one-time / unit</inlineHelpText>
    <label>Prepaid 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>