default/objects/Pricebook2/fields/Prepaid_24__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_24__c</fullName>
    <inlineHelpText>one-time / unit</inlineHelpText>
    <label>Prepaid 24</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>