default/objects/Pricebook2/fields/Reader_Dalas__c.field-meta.xml
<CustomField>
    <fullName>Reader_Dalas__c</fullName>
    <description>Contact reader Dalas</description>
    <label>Reader Dalas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>