default/objects/Pricebook2/fields/Reader_HIDProx__c.field-meta.xml
<CustomField>
    <fullName>Reader_HIDProx__c</fullName>
    <description>Non-contact reader cards HIDProx</description>
    <label>Reader HIDProx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>