default/objects/Pricebook2/fields/Reader_Inditag__c.field-meta.xml
<CustomField>
    <fullName>Reader_Inditag__c</fullName>
    <description>Non-contact reader cards Inditag</description>
    <label>Reader Inditag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>