default/objects/Pricebook2/fields/Reader_Legic__c.field-meta.xml
<CustomField>
    <fullName>Reader_Legic__c</fullName>
    <description>Non-contact cards Legic</description>
    <label>Reader Legic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>