default/objects/Pricebook2/fields/Reader_Mifare__c.field-meta.xml
<CustomField>
    <fullName>Reader_Mifare__c</fullName>
    <description>Non-contact reader cards Mifare</description>
    <label>Reader Mifare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>