default/objects/Pricebook2/fields/Reader_Multi_125__c.field-meta.xml
<CustomField>
    <fullName>Reader_Multi_125__c</fullName>
    <description>Non-contact reader cards Multi 125</description>
    <label>Reader Multi 125</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>