default/objects/Pricebook2/fields/Reader_Multi_ISO__c.field-meta.xml
<CustomField>
    <fullName>Reader_Multi_ISO__c</fullName>
    <description>Non-contact reader cards Multi ISO</description>
    <label>Reader Multi ISO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>