default/objects/Pricebook2/fields/Reader_RFID_Slim__c.field-meta.xml
<CustomField>
    <fullName>Reader_RFID_Slim__c</fullName>
    <description>Non-contact reader of cards included piezo</description>
    <label>Reader RFID Slim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>