default/objects/Pricebook2/fields/Reservations__c.field-meta.xml
<CustomField>
    <fullName>Reservations__c</fullName>
    <description>Reservation and approval module</description>
    <inlineHelpText>vehicle/month</inlineHelpText>
    <label>Reservations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>