default/objects/Pricebook2/fields/RFID_adhesive_chip__c.field-meta.xml
<CustomField>
    <fullName>RFID_adhesive_chip__c</fullName>
    <description>Adhesive non-contact chip RFID</description>
    <label>RFID adhesive chip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>