default/objects/Pricebook2/fields/RFID_fobs__c.field-meta.xml
<CustomField>
    <fullName>RFID_fobs__c</fullName>
    <description>Non-contact chip RFID</description>
    <label>RFID fobs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>