default/objects/Pricebook2/fields/Service_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Service_Alarm__c</fullName>
    <description>A fee for the service of guarding the vehicle</description>
    <inlineHelpText>vehicle/month</inlineHelpText>
    <label>Service Alarm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>