default/objects/Pricebook2/fields/Siren_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Siren_Alarm__c</fullName>
    <description>siren Alarm</description>
    <label>Siren Alarm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>