default/objects/Pricebook2/fields/Spare_battery_for_CN85_1_4__c.field-meta.xml
<CustomField>
    <fullName>Spare_battery_for_CN85_1_4__c</fullName>
    <description>internal spare battery for CN85 v1.4</description>
    <label>Spare battery for CN85 1.4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>