default/objects/Pricebook2/fields/Standard_12__c.field-meta.xml
<CustomField>
    <fullName>Standard_12__c</fullName>
    <inlineHelpText>monthly / unit</inlineHelpText>
    <label>Standard 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>