default/objects/Pricebook2/fields/Standard_36__c.field-meta.xml
<CustomField>
    <fullName>Standard_36__c</fullName>
    <description>Monthly flat fee for services FLEETCOR Carnet in Poland, include rental SIM card, data transmission (communication fees) and background maps.
Commitment for a period of 36 months.</description>
    <inlineHelpText>monthly / unit</inlineHelpText>
    <label>Standard 36</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>