default/objects/Pricebook2/fields/Standard_Unit_Package_16__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package_16__c</fullName>
    <inlineHelpText>Discounted price for 16+ Carnet Units.</inlineHelpText>
    <label>Standard Unit Package (16+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>