default/objects/Pricebook2/fields/Standard_Unit_Package_6_15__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package_6_15__c</fullName>
    <inlineHelpText>Discounted price for 6-15 Carnet Units.</inlineHelpText>
    <label>Standard Unit Package (6-15)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>