default/objects/Pricebook2/fields/Standard_Unit_Package__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package__c</fullName>
    <description>The standard pack for stationary installations, appropriate monitoring cars and trucks. The pack includes GPS unit and antenna, CAN GO CLICK and route type switch.</description>
    <inlineHelpText>one-time fee / unit</inlineHelpText>
    <label>Standard Unit Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>