default/objects/Pricebook2/fields/Temperature_measurement_in_the_cargo_spa__c.field-meta.xml
<CustomField>
    <fullName>Temperature_measurement_in_the_cargo_spa__c</fullName>
    <inlineHelpText>Temperature measurement in the cargo space</inlineHelpText>
    <label>Temperature measurement cargo space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>