default/objects/Pricebook2/fields/Temperature_sensor_Dalas__c.field-meta.xml
<CustomField>
    <fullName>Temperature_sensor_Dalas__c</fullName>
    <description>uncalibrated sensor Dalas</description>
    <label>Temperature sensor Dalas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>