default/objects/Pricebook2/fields/Temperature_sensor_Pt100B_with_cable_1m__c.field-meta.xml
<CustomField>
    <fullName>Temperature_sensor_Pt100B_with_cable_1m__c</fullName>
    <description>standard precision 0,3°C</description>
    <label>Temperature sensor Pt100B with cable 1m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>