default/objects/Pricebook2/fields/Unit_Activation__c.field-meta.xml
<CustomField>
    <fullName>Unit_Activation__c</fullName>
    <description>One-time fee for activating of vehicle in system FLEETCOR Carnet</description>
    <inlineHelpText>one-time fee / unit</inlineHelpText>
    <label>Unit Activation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>