default/objects/Pricebook2/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>