default/objects/Pricebook2/fields/Web_services__c.field-meta.xml
<CustomField>
    <fullName>Web_services__c</fullName>
    <description>Transmission of information via web services - data exchange.</description>
    <inlineHelpText>vehicle/month</inlineHelpText>
    <label>Web services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>