default/objects/Pricebook2/fields/X1_m_cable_to_the_temperature_sensor__c.field-meta.xml
<CustomField>
    <fullName>X1_m_cable_to_the_temperature_sensor__c</fullName>
    <description>range of temperature measure -10 to 60°C</description>
    <label>1 m cable to the temperature sensor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>