default/objects/Pricebook2/fields/X1_m_silicone_cable_to_the_temp_sensor__c.field-meta.xml
<CustomField>
    <fullName>X1_m_silicone_cable_to_the_temp_sensor__c</fullName>
    <description>range of temperature measure -40 to 90°C</description>
    <label>1 m silicone cable to the temp sensor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>