default/objects/Pricebook2/recordTypes/Carnet_OBD.recordType-meta.xml
<RecordType>
    <fullName>Carnet_OBD</fullName>
    <active>true</active>
    <description>Carnet OBD Price Book.</description>
    <label>Carnet OBD</label>
</RecordType>