default/objects/Pricebook2/recordTypes/Carnet_Unit.recordType-meta.xml
<RecordType>
    <fullName>Carnet_Unit</fullName>
    <active>true</active>
    <description>Carnet Standard Price Book.</description>
    <label>Carnet Standard</label>
</RecordType>