default/objects/Pricebook2/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard Price Book Record Type.</description>
    <label>Standard</label>
</RecordType>